--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,9 @@ jobs:
       - uses: actions/checkout@v4    
         with:
           path: dest
+          repository: renekaesler/renekaesler.com
           ref: main
-          repository: renekaesler/renekaesler.com    
+          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
       - uses: actions/download-artifact@v4
         with:
           path: public
