--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,22 +19,30 @@ jobs:
 
   publish_en:
     needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4    
-        with:
-          repository: renekaesler/renekaesler.com
-          ref: main
-          token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
-      - name: setup git config
-        run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-      - uses: actions/download-artifact@v4
-      - run: |
-          rm -rf docs
-          cp -r artifact/en/. docs
-          git add docs
-          git commit -m 'Automated Publishing - renekaesler'
-      - run: git push
+    uses: ./.github/workflows/push-to-repository.yml
+    with:
+      repository: renekaesler/renekaesler.com
+      files: artifact/en/.
+    secrets: inherit
+
+  # publish_en:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4    
+  #       with:
+  #         repository: renekaesler/renekaesler.com
+  #         ref: main
+  #         token:  ${{ secrets.ACTIONS_GITHUB_TOKEN }}
+  #     - name: setup git config
+  #       run: |
+  #         git config user.name "GitHub Actions Bot"
+  #         git config user.email "<>"
+  #     - uses: actions/download-artifact@v4
+  #     - run: |
+  #         rm -rf docs
+  #         cp -r artifact/en/. docs
+  #         git add docs
+  #         git commit -m 'Automated Publishing - renekaesler'
+  #     - run: git push
       
